<resources>
    <string name="app_name">!Slacker</string>
    <string name="slack_title_label">Assignment:</string>
    <string name="slack_title_hint">What needs to be completed?</string>
    <string name="slack_description_label">Description</string>
    <string name="slack_description_hint">Enter details of the assignment...</string>
    <string name="slack_completed_label">Completed</string>
    <string name="due_date_title_label">Due Date:</string>
    <string name="date_picker_title">Select a Due Date</string>
    <string name="new_slack">New Assignment</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$d assignments</string>
    <string name="delete_button">Delete</string>
</resources>
