<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:layout_margin="16dp">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/slack_title_label"/>
    <EditText
        android:id="@+id/slack_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/slack_title_hint"/>
    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/slack_description_label"/>

    <EditText
        android:id="@+id/slack_description"
        android:layout_width="match_parent"
        android:layout_height="154dp"
        android:gravity="top|left"
        android:hint="@string/slack_description_hint" />
    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/due_date_title_label"/>
    <Button
        android:id="@+id/slack_due_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <CheckBox
        android:id="@+id/slack_completed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/slack_completed_label"/>

</LinearLayout>